css/styles.css
@font-face {
  font-family: Algol;
  src: url('../fonts/Algol.ttf');
}

@font-face {
  font-family: Daydream;
  src: url('../fonts/Daydream.ttf');
}

* {
  margin: 0;
  padding: 0;

  font-family: Algol, system-ui;
  font-size: 20px;
  /* font-weight: 400;
  font-style: normal; */
}

body {
  background-image: url("../img/backgrounds/1.gif");
  color: white;
  background-attachment: fixed;
  overflow: hidden;
}

.scroll-container {
  height: 100vh;
  overflow-y: auto;
  /* Enable scrolling */
  overflow-x: hidden;
}

.title-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100vw;
  margin-top: 0.5rem;
}

.title-img {
  width: 800px;
  height: auto;
}

.main-navbar {
  width: 800px;

  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;

  background-image: url('../img/grids/blue_row.png');
  background-size: cover;
  background-position: center;

  border: #3041FF solid 2px;

  display: flex;
  justify-content: center;
  gap: 2rem;
  font-size: 32px;

  color: #3041FF;
}

.main-navbar a {
  text-decoration: none;
  color: #3041FF;
  font-weight: bold;
}

.main-navbar a:hover {
  text-decoration: underline;
}

.nav-link {
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

.nav-icon {
  height: 32px;
}

.content-container {
  width: 100vw;
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

.title-banner {
  width: 800px;
  height: 64px;

  background-image: url('../img/grids/blue_title_grid.png');
  background-size: cover;
  background-position: center;

  border: #3041FF solid 2px;
}

.content-background {
  position: relative;

  background-image: url('../img/grids/blue_row.png');
  background-size: contain;
  background-position: center;
  background-repeat: repeat-y;

  border: #3041FF solid 2px;

  z-index: 0;
  overflow: hidden;
  width: 800px;
  min-width: 800px;
  word-wrap: break-word;
  word-break: break-all;
}

.content {
  padding: 1rem;
  word-wrap: break-word;
  word-break: break-all;
}

.scrolling-text-container {
  width: 800px;
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  height: 32px;

  background-image: url('../img/grids/blue_row.png');
  background-size: cover;
  background-position: center;

  border: #3041FF solid 2px;
  margin-top: 0.5rem;

  display: flex;
  align-items: center;
}

.secondary-content {
  width: 400px;
  height: max-content;

  background-image: url('../img/grids/blue_row.png');
  background-size: contain;
  background-position: center;
  background-repeat: repeat-y;

  border: #3041FF solid 2px;

  padding-left: 20px;
  padding-right: 20px;
}

.secondary-content section {
  padding: 0.25rem;
}

.under-construction-divider {
  width: 70%;
  text-align: center;
  margin-top: 1rem;
}

.center {
  text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Daydream, system-ui;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

h1 {
  font-size: 32px;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 16px;
}

h4 {
  font-size: 10px;
}

.side-content-elevated {
  background-color: rgba(0, 0, 0, 0.5);
  /* padding: 0.5rem; */
  border: #3041FF solid 2px;
  margin-bottom: 1rem;

  margin-left: auto;
  margin-right: auto;

  max-height: 256px;
  overflow-y: auto;
}

.side-content-elevated-padding {
  padding: 0.5rem;
}

.marquee {
  animation: marquee 15s linear infinite;
}

.marquee span {
  animation: marquee 15s linear infinite;
}

@keyframes marquee {
  0% {
    transform: translate(0, 0);
  }

  100% {
    transform: translate(-100%, 0);
  }
}

a {
  color: #3041FF;
  text-decoration: none;
}

a:hover {
  color: #3041FF;
  text-decoration: underline;
}

#statuscafe-username a {
  font-weight: bold;
}

#statuscafe-username:not(a) {
  color: gray;
}

#statuscafe-timeAgo {
  color: rgb(90, 90, 90);
  font-size: 18px;
}

.status-feeling {
  display: inline-flex;
  align-items: center;
  gap: 0.25rem;
}

.status-divider {
  color: gray;
  font-size: 16px;
  align-self: center;
}

